--- a/HTML&CSS/Quiz/index.html
+++ b/HTML&CSS/Quiz/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <img id="logo" alt="freeCodeCamp" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg">
-      <h1>HTML/CSS Quiz</h1>
+      <h1>HTML&CSS Quiz</h1>
       <nav>
         <ul>
           <li><a href="#student-info" accesskey="s">INFO</a></li>
